pothos: work on splitting up wrapper tmpl

--- a/gr-pothos/CMakeLists.txt
+++ b/gr-pothos/CMakeLists.txt
@@ -72,6 +72,7 @@ GR_PYTHON_INSTALL(
 INSTALL(
     FILES
         registration.tmpl.cpp
+        description.tmpl.cpp
     DESTINATION ${GR_PYTHON_DIR}/gnuradio/pothos
     COMPONENT "pothos_python"
 )
